[gd_scene load_steps=7 format=3 uid="uid://cxchylkrsktjq"]

[ext_resource type="Texture2D" uid="uid://bmwe1jx76jyyk" path="res://Assets/Menu Items/ESC_Menu_Background.png" id="1_3ff4x"]
[ext_resource type="Script" path="res://Scripts/esc_menu_script.gd" id="1_hc1qw"]
[ext_resource type="PackedScene" uid="uid://duu7h4qycrvdw" path="res://Scenes/back_button.tscn" id="2_m0gy4"]
[ext_resource type="FontFile" uid="uid://bwcgoiol4t6u0" path="res://Assets/Fonts/TropiLand-L3MPg.ttf" id="4_5pgxn"]
[ext_resource type="PackedScene" uid="uid://b6ava5dcnfmnf" path="res://Scenes/level_select_button.tscn" id="4_jtu56"]
[ext_resource type="PackedScene" uid="uid://dic6o6q24v7m8" path="res://Scenes/help_button.tscn" id="6_5g2nb"]

[node name="ESC_Menu" type="CanvasLayer"]
visible = false
script = ExtResource("1_hc1qw")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3ff4x")

[node name="Back_Button" parent="TextureRect" instance=ExtResource("2_m0gy4")]
layout_mode = 1
offset_left = 544.0
offset_top = 360.0
offset_right = 1004.0
offset_bottom = 586.0

[node name="PausedText" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5pgxn")
theme_override_font_sizes/font_size = 150
text = "PAUSED
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreText" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -104.0
offset_right = 200.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_5pgxn")
theme_override_font_sizes/font_size = 50
text = "High Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level_Select_Button" parent="TextureRect" instance=ExtResource("4_jtu56")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 224.0
offset_right = 364.0
offset_bottom = 450.0

[node name="Help_Button" parent="TextureRect" instance=ExtResource("6_5g2nb")]
layout_mode = 0
offset_left = 544.0
offset_top = 472.0
offset_right = 1004.0
offset_bottom = 698.0

[connection signal="pressed" from="TextureRect/Back_Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="TextureRect/Level_Select_Button" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="TextureRect/Help_Button" to="." method="_on_help_button_pressed"]
